crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@240.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[0, 1, -2, -3.4, 5.6]', '$[*].ceiling().abs()');"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..71
    FuncCall@7..71
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..47
        Sconst@24..47 "'[0, 1, -2, -3.4, 5.6]'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..71
        Sconst@49..71 "'$[*].ceiling().abs()'"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

