crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@242.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[{},1]', '$[*].keyvalue()');"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..32
        Sconst@24..32 "'[{},1]'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..51
        Sconst@34..51 "'$[*].keyvalue()'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

