crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@245.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": 1, \"b\": [1, 2], \"c\": {\"a\": \"bbb\"}}', '$.keyvalue()');"
---
SelectStmt@0..84
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..82
    FuncCall@7..82
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..66
        Sconst@24..66 "'{\"a\": 1, \"b\": [1, 2] ..."
      Ascii44@66..67 ","
      Whitespace@67..68 " "
      AConst@68..82
        Sconst@68..82 "'$.keyvalue()'"
  Ascii41@82..83 ")"
  Ascii59@83..84 ";"

