crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@246.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[{\"a\": 1, \"b\": [1, 2]}, {\"c\": {\"a\": \"bbb\"}}]', '$[*].keyvalue()');"
---
SelectStmt@0..91
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..89
    FuncCall@7..89
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..70
        Sconst@24..70 "'[{\"a\": 1, \"b\": [1, 2 ..."
      Ascii44@70..71 ","
      Whitespace@71..72 " "
      AConst@72..89
        Sconst@72..89 "'$[*].keyvalue()'"
  Ascii41@89..90 ")"
  Ascii59@90..91 ";"

