crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@247.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[{\"a\": 1, \"b\": [1, 2]}, {\"c\": {\"a\": \"bbb\"}}]', 'strict $.keyvalue()');"
---
SelectStmt@0..95
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..93
    FuncCall@7..93
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..70
        Sconst@24..70 "'[{\"a\": 1, \"b\": [1, 2 ..."
      Ascii44@70..71 ","
      Whitespace@71..72 " "
      AConst@72..93
        Sconst@72..93 "'strict $.keyvalue()'"
  Ascii41@93..94 ")"
  Ascii59@94..95 ";"

